--- a/bangkok.html
+++ b/bangkok.html
@@ -266,7 +266,7 @@
             <h1>بانكوك: عاصمة التباين بين الأصالة والحداثة</h1>
 
             <!-- صورة رئيسية لبانكوك -->
-            <div class="image-placeholder">إضافة صورة رئيسية لبانكوك هنا</div>
+            <img src="bangkok.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
 
             <h2>🗓 أفضل وقت للزيارة</h2>
             <ul>
