--- a/bangkok.html
+++ b/bangkok.html
@@ -274,7 +274,7 @@
                 <li>مارس – مايو: درجات حرارة مرتفعة (حتى 40°C).</li>
                 <li>يونيو – أكتوبر: أمطار، وزيارات أقل وأجواء هادئة.</li>
             </ul>
-            <div class="image-placeholder">إضافة صورة للطقس أو مهرجان سونغكران هنا</div>
+            <img src="bangkok2.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
 
             <div class="section-divider"></div>
 
