--- a/bangkok.html
+++ b/bangkok.html
@@ -288,7 +288,7 @@
 
             <h2>🏙 لمحة عن المدينة والتنقل</h2>
             <p>تجمع بانكوك بين ناطحات السحاب، القنوات المائية، والمعابد التاريخية. وسائل التنقل: سكاي ترين (BTS)، ميترو (MRT)، تاكسي/Grab، وقوارب نهريّة في تشاو فرايا.</p>
-            <div class="image-placeholder">إضافة صورة لنهر تشاو فرايا أو BTS هنا</div>
+            <img src="bangkok3.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
 
             <div class="section-divider"></div>
 
