--- a/bangkok.html
+++ b/bangkok.html
@@ -300,7 +300,7 @@
                 <li><strong>Thong Smith (Central Embassy)</strong><br>نسخة فاخرة من “نودلز القارب”، مع مرق غني ولحم بقري وكوروبوتا بقر ممتاز. أجواء حديثة ومريحة ضمن مركز “سنترال إمباسي”، خيار مثالي للوجبات السريعة ذات الجودة العالية.</li>
                 <li><strong>Phra Nakhon – Capella Bangkok</strong><br>يقدم مأكولات تايلاندية أصيلة بأسلوب معاصر، ويطل على نهر تشاو فرايا. أطباق مميزة: لحم خنزير مقلي مقرمش، كاري الروبيان بالأوراق، وسلطة البابايا (سوم تم)، مع الاعتماد على مزارع عضوية محلية.</li>
             </ul>
-            <div class="image-placeholder">إضافة صورة لأحد المطاعم أو طبق مميز هنا</div>
+            <img src="bangkok4.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
 
             <div class="section-divider"></div>
 
