--- a/bangkok.html
+++ b/bangkok.html
@@ -305,14 +305,28 @@
             <div class="section-divider"></div>
 
             <h2>🏨 أفضل 5 فنادق مع روابط حجوزات</h2>
-            <ul>
-                <li><strong>Capella Bangkok</strong><br>فندق فخم بجانب النهر، الأفضل في العالم 2024، خدمات ممتازة وأجواء راقية.<br><a href="https://www.booking.com/hotel/th/capella-bangkok.html" target="_blank">احجز عبر Booking.com</a></li>
-                <li><strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.</li>
-                <li><strong>Four Seasons Hotel Bangkok</strong><br>إطلالة على النهر، ومطعم Yu Ting Yan الشهير بالمأكولات الصينية.<br><a href="https://www.booking.com/hotel/th/four-seasons-bangkok-at-chao-phraya-river.html" target="_blank">احجز عبر Booking.com</a></li>
-                <li><strong>The St. Regis Bangkok</strong><br>خدمة Butler فاخرة ومرافق مناسبة للعائلات.<br><a href="https://www.booking.com/hotel/th/the-st-regis-bangkok.html" target="_blank">احجز عبر Booking.com</a></li>
-                <li><strong>Cape House Langsuan Hotel</strong><br>أنيق، غرف واسعة، موقع ممتاز للمسافرين.<br><a href="https://www.booking.com/hotel/th/cape-house-langsuan.html" target="_blank">احجز عبر Booking.com</a><br>يُوصى به حسب الشيف “نوك”.</li>
-            </ul>
-            <div class="image-placeholder">إضافة صورة لأحد الفنادق هنا</div>
+<ul>
+    <li>
+        <strong>Capella Bangkok</strong><br>فندق فخم بجانب النهر، الأفضل في العالم 2024، خدمات ممتازة وأجواء راقية.<br><a href="https://www.booking.com/hotel/th/capella-bangkok.html" target="_blank">احجز عبر Booking.com</a>
+        <br><img src="capella.png" alt="صورة فندق Capella Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+    </li>
+    <li>
+        <strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.<br>
+        <img src="mandarin_oriental_bangkok.png" alt="صورة فندق Mandarin Oriental Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+    </li>
+    <li>
+        <strong>Four Seasons Hotel Bangkok</strong><br>إطلالة على النهر، ومطعم Yu Ting Yan الشهير بالمأكولات الصينية.<br><a href="https://www.booking.com/hotel/th/four-seasons-bangkok-at-chao-phraya-river.html" target="_blank">احجز عبر Booking.com</a>
+        <br><img src="four_seasons_bangkok.png" alt="صورة فندق Four Seasons Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+    </li>
+    <li>
+        <strong>The St. Regis Bangkok</strong><br>خدمة Butler فاخرة ومرافق مناسبة للعائلات.<br><a href="https://www.booking.com/hotel/th/the-st-regis-bangkok.html" target="_blank">احجز عبر Booking.com</a>
+        <br><img src="st_regis_bangkok.png" alt="صورة فندق The St. Regis Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+    </li>
+    <li>
+        <strong>Cape House Langsuan Hotel</strong><br>أنيق، غرف واسعة، موقع ممتاز للمسافرين.<br><a href="https://www.booking.com/hotel/th/cape-house-langsuan.html" target="_blank">احجز عبر Booking.com</a><br>يُوصى به حسب الشيف “نوك”.
+        <br><img src="cape_house_langsuan.png" alt="صورة فندق Cape House Langsuan" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+    </li>
+</ul>
 
             <div class="section-divider"></div>
 
