--- a/bangkok.html
+++ b/bangkok.html
@@ -308,7 +308,7 @@
 <ul>
     <li>
         <strong>Capella Bangkok</strong><br>فندق فخم بجانب النهر، الأفضل في العالم 2024، خدمات ممتازة وأجواء راقية.<br><a href="https://www.booking.com/hotel/th/capella-bangkok.html" target="_blank">احجز عبر Booking.com</a>
-        <br><img src="capella.png" alt="صورة فندق Capella Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+        <br><img src="cepella.png" alt="صورة فندق Capella Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
         <strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.<br>
