--- a/bangkok.html
+++ b/bangkok.html
@@ -312,7 +312,7 @@
     </li>
     <li>
         <strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.<br>
-        <img src="mandarin_oriental_bangkok.png" alt="صورة فندق Mandarin Oriental Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+        <img src="mandarin.png" alt="صورة فندق Mandarin Oriental Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
         <strong>Four Seasons Hotel Bangkok</strong><br>إطلالة على النهر، ومطعم Yu Ting Yan الشهير بالمأكولات الصينية.<br><a href="https://www.booking.com/hotel/th/four-seasons-bangkok-at-chao-phraya-river.html" target="_blank">احجز عبر Booking.com</a>
