--- a/bangkok.html
+++ b/bangkok.html
@@ -311,7 +311,7 @@
         <br><img src="cepella.png" alt="صورة فندق Capella Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
-        <strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.<br>
+        <strong>Mandarin Oriental Bangkok</strong><br>أيقوني، تاريخي ويشتهر بخدمة استثنائية، مفضّل لدى الشيف “نوك”.<br><a href="https://www.booking.com/hotel/th/mandarin-oriental-bangkok.html" target="_blank">احجز عبر Booking.com</a>
         <img src="mandarin.png" alt="صورة فندق Mandarin Oriental Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
