--- a/bangkok.html
+++ b/bangkok.html
@@ -316,7 +316,7 @@
     </li>
     <li>
         <strong>Four Seasons Hotel Bangkok</strong><br>إطلالة على النهر، ومطعم Yu Ting Yan الشهير بالمأكولات الصينية.<br><a href="https://www.booking.com/hotel/th/four-seasons-bangkok-at-chao-phraya-river.html" target="_blank">احجز عبر Booking.com</a>
-        <br><img src="four_seasons_bangkok.png" alt="صورة فندق Four Seasons Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+        <br><img src="forseason.png" alt="صورة فندق Four Seasons Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
         <strong>The St. Regis Bangkok</strong><br>خدمة Butler فاخرة ومرافق مناسبة للعائلات.<br><a href="https://www.booking.com/hotel/th/the-st-regis-bangkok.html" target="_blank">احجز عبر Booking.com</a>
