--- a/bangkok.html
+++ b/bangkok.html
@@ -320,7 +320,7 @@
     </li>
     <li>
         <strong>The St. Regis Bangkok</strong><br>خدمة Butler فاخرة ومرافق مناسبة للعائلات.<br><a href="https://www.booking.com/hotel/th/the-st-regis-bangkok.html" target="_blank">احجز عبر Booking.com</a>
-        <br><img src="st_regis_bangkok.png" alt="صورة فندق The St. Regis Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+        <br><img src="the_st.png" alt="صورة فندق The St. Regis Bangkok" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
     <li>
         <strong>Cape House Langsuan Hotel</strong><br>أنيق، غرف واسعة، موقع ممتاز للمسافرين.<br><a href="https://www.booking.com/hotel/th/cape-house-langsuan.html" target="_blank">احجز عبر Booking.com</a><br>يُوصى به حسب الشيف “نوك”.
