--- a/bangkok.html
+++ b/bangkok.html
@@ -324,7 +324,7 @@
     </li>
     <li>
         <strong>Cape House Langsuan Hotel</strong><br>أنيق، غرف واسعة، موقع ممتاز للمسافرين.<br><a href="https://www.booking.com/hotel/th/cape-house-langsuan.html" target="_blank">احجز عبر Booking.com</a><br>يُوصى به حسب الشيف “نوك”.
-        <br><img src="cape_house_langsuan.png" alt="صورة فندق Cape House Langsuan" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
+        <br><img src="capehouse.png" alt="صورة فندق Cape House Langsuan" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
     </li>
 </ul>
 
