--- a/bangkok.html
+++ b/bangkok.html
@@ -298,7 +298,7 @@
                 <li><strong>Gaggan Anand</strong><br>مطعم هندي تقدمي – “تجربة مسرح طعام” تشمل 22 طبقًا مع مؤثرات بصرية وصوتية. يجمع بين وصفات هندية معدّلة بإبداع عالٍ ولحظات تفاعلية مع الضوء والموسيقى.</li>
                 <li><strong>Sorn</strong><br>أول مطعم في تايلاند ينال ثلاث نجوم ميشلان، متخصص في المطبخ الجنوبي التايلاندي. تجربة تذوق تتألف من 22 طبقًا غنيًا بالتوابل، بما في ذلك: سلطات أرز عشبية، لحوم بحر وفواكه محلية، مليء بالنكهات الحارّة والمنعشة.</li>
                 <li><strong>Thong Smith (Central Embassy)</strong><br>نسخة فاخرة من “نودلز القارب”، مع مرق غني ولحم بقري وكوروبوتا بقر ممتاز. أجواء حديثة ومريحة ضمن مركز “سنترال إمباسي”، خيار مثالي للوجبات السريعة ذات الجودة العالية.</li>
-                <li><strong>Phra Nakhon – Capella Bangkok</strong><br>يقدم مأكولات تايلاندية أصيلة بأسلوب معاصر، ويطل على نهر تشاو فرايا. أطباق مميزة: لحم خنزير مقلي مقرمش، كاري الروبيان بالأوراق، وسلطة البابايا (سوم تم)، مع الاعتماد على مزارع عضوية محلية.</li>
+                <li><strong>Phra Nakhon – Capella Bangkok</strong><br>يقدم مأكولات تايلاندية أصيلة بأسلوب معاصر، ويطل على نهر تشاو فرايا. أطباق مميزة: كاري الروبيان بالأوراق، وسلطة البابايا (سوم تم)، مع الاعتماد على مزارع عضوية محلية.</li>
             </ul>
             <img src="bangkok4.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
 
@@ -338,7 +338,7 @@
                 <li>مساج تايلاندي بأسعار مناسبة</li>
                 <li>بارات غير كحولية مثل BKK Social Club في Four Seasons</li>
             </ul>
-            <div class="image-placeholder">إضافة صورة لسوق ليلي أو رحلة نهرية هنا</div>
+            <img src="bangkok5.png" alt="صورة بانكوك" style="width: 100%; max-width: 800px; height: auto; margin: 20px 0; border-radius: 8px; display: block;">
         </div>
     </div>
 
