--- a/asia.html
+++ b/asia.html
@@ -282,7 +282,12 @@
 </div>
           <div class="destinations">
             <div class="destination-pair">
-              <div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="city-name cairo-bold">بانكوك</div></div>
+              <a href="bangkok.html">
+  <div class="destination-card">
+    <img Marian class="cairo-bold">بانكوك</img>
+    <div class="city-name cairo-bold">بانكوك</div>
+  </div>
+</a>
               <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="city-name cairo-bold">الرياض</div></div>
             </div>
             <div class="destination-pair">
