--- a/asia.html
+++ b/asia.html
@@ -280,10 +280,7 @@
     تتميز قارة آسيا سياحيًا بتنوع ثقافي وجغرافي مذهل يجعلها من أكثر الوجهات جذبًا للسياح في العالم. فهي تضم معالم تاريخية عريقة مثل سور الصين العظيم ومعابد أنغكور وات في كمبوديا، ومناظر طبيعية خلابة كجبال الهيمالايا وشواطئ جزر المالديف وتايلاند. كما تشتهر بمدنها النابضة بالحياة مثل طوكيو، دبي، الرياض، وبانكوك، وتجاربها الفريدة مثل الأسواق الشعبية، الأطعمة المتنوعة، والمنتجعات الفاخرة. آسيا تقدم مزيجًا رائعًا من الأصالة والحداثة، ما يجعلها وجهة ساحرة لعشاق المغامرة والثقافة والاسترخاء.
   </div>
 </div>
-          <div class="destination-card" onclick="window.location.href='bangkok.html';">
-  <img src="bangkok.jpg" alt="بانكوك">
-  <div class="city-name cairo-bold">بانكوك</div>
-</div>
+          ‏<div class="destination-card"><img src="bangkok.jpg" alt="بانكوك"><div class="city-name cairo-bold">بانكوك</div></div>
               <div class="destination-card"><img src="riyadh.jpg" alt="الرياض"><div class="city-name cairo-bold">الرياض</div></div>
             </div>
             <div class="destination-pair">
